Keyboard support for multitable

--- a/sqlit/domains/shell/app/main.css
+++ b/sqlit/domains/shell/app/main.css
@@ -140,6 +140,10 @@
         display: none;
     }
 
+    #results-area.stacked-mode.results-filter-active #results-filter {
+        display: block;
+    }
+
     #results-area.stacked-mode #stacked-results {
         display: block;
     }
