Add --theme CLI flag and improve textual-ansi theme
- Add --theme CLI argument to override theme on startup
- Remove Duplicate from footer bar (still in help menu)
- Improve textual-ansi DataTable cursor with black text on blue background

--- a/sqlit/domains/shell/app/main.css
+++ b/sqlit/domains/shell/app/main.css
@@ -211,22 +211,22 @@
     }
 
     .theme-ansi DataTable > .datatable--cursor {
-        background: ansi_blue 18%;
-        color: $text;
+        background: ansi_bright_blue;
+        color: ansi_black;
     }
 
     .theme-ansi DataTable > .datatable--selectrange {
-        background: ansi_blue 8%;
+        background: ansi_blue 30%;
         color: $text;
     }
 
     .theme-ansi DataTable > .datatable--fixed-cursor {
-        background: ansi_blue 12%;
+        background: ansi_blue 40%;
         color: $text;
     }
 
     .theme-ansi DataTable > .datatable--header-cursor {
-        background: ansi_blue 12%;
+        background: ansi_blue 40%;
         color: $text;
     }
 
